--- a/index.html
+++ b/index.html
@@ -142,8 +142,12 @@
             </div>
         </div>
     </div>
-
+    <div class="hc">
+        <h3 style="margin-top: 25px; text-align: center;">BEST SELLING PRODUCT</h3>
+    </div>
+   
     <div class="hero6">
+       
         <div class="hero6_1">
             <div class="hero6_1img">
                   <img src="sa3.jpg" alt="">
@@ -200,6 +204,15 @@
         </div>
     </footer>
 
+    <div class="lastnav">
+        <ul>
+            <li>home</li>
+            <li>menu</li>
+            <li>search</li>
+            <li>cart</li>
+            <li>account</li>
+        </ul>
+    </div>
 
     
 </body>
