--- a/index.html
+++ b/index.html
@@ -200,7 +200,32 @@
         </div>
     </footer>
 
+<div class="lastnav">
+        <ul>
+            <div class="h">
+                <i class="fa-solid fa-house"></i>
+                                <li>home</li>
+            </div>
 
+            <div class="h">
+                <i class="fa-solid fa-bars-staggered"></i>
+            <li>menu</li>
+            </div>
+            <div class="h">
+                <i class="fa-brands fa-searchengin"></i>
+                <li>search</li>
+            </div>
+            <div class="h">
+                <i class="fa-solid fa-bag-shopping"></i>
+                            <li>cart</li>
+            </div>
+            <div class="h">
+                <i class="fa-regular fa-user"></i>
+                <li>account</li>
+            </div> 
+        </ul>
+    </div>
+    
     
 </body>
 </html>
